--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -2,16 +2,22 @@
 <!ENTITY obscite-preferences "Zotero Obsidian Citations Preferences">
 
 <!ENTITY vault-source-folder "Obsidian Vault Folder with Reading Notes">
-<!ENTITY vault-source-folder-desc "The directory containing your Obsidian Citation markdown notes (notes should begin with @citekey).">
+<!ENTITY vault-source-folder-desc "The directory containing your Obsidian Citation Markdown notes (notes should begin with @citekey).">
 
 <!ENTITY zotids-source-label "Source of Zotero Item IDs">
-<!ENTITY zotids-source-label-desc "Zotero Obsidian Citations needs to map the BBT citekeys from your MarkDown notes to the Zotero Item. The easiest way to do this is to specify the path to an auto-updating BBT JSON export of your library. Alternatively, if your MarkDown notes include the Zotero Item Key, you can specify a RegEx to extract the ZoteroKey from the note contents.">
+<!ENTITY zotids-source-label-desc "How Should ZoteroObsidianCitations map the BBT citekeys from your Markdown notes to the Zotero Item?">
 
+<!ENTITY pinned-citekeys-title "All of the BBT citekeys in the Markdown notes are pinned in Zotero">
+<!ENTITY pinned-citekeys "Find the BBT citekey in the Extra field">
+<!ENTITY pinned-citekeys-desc "If you have pinned the BBT citekeys in Zotero for the items in your Markdown notes.">
+
+<!ENTITY obscite-bbtjson-title "Use an BBT JSON library export">
 <!ENTITY bbtjson-source-file "BBT JSON Export of Library:">
 <!ENTITY obscite-bbtjson-desc "The BetterBibTex export of your library. Must include the fields 'citekey' and 'itemID'. Should be auto-updating.">
 
+<!ENTITY obscite-zotkeyregex-title "The Markdown notes contain the Zotero Item Key (e.g. ABCD1234 in zotero://select/library/items/ABCD1234).">
 <!ENTITY zotkey-regex "Zotero Key RegEx:">
-<!ENTITY zotkey-regex-desc "RegEx for the Zotero Item Key in the MarkDown note.">
+<!ENTITY zotkey-regex-desc "NB this is not the same as the BBT citekey you assigned an item (e.g. mycitekey in zotero://select/items/@mycitekey)">
 
 
 <!ENTITY metadata-keyword "Markdown Metadata Keyword">
