--- a/chrome/locale/en-US/overlay.dtd
+++ b/chrome/locale/en-US/overlay.dtd
@@ -1,4 +1,4 @@
 <!ENTITY obscite-syncdb-label "ZoteroObsidianCitations Sync Tags">
 <!ENTITY obscite-preferences-label "ZoteroObsidianCitations Preferences…">
 
-<!ENTITY obscite-openmd-label "Open MD note in Obsidian">
+<!ENTITY obscite-openmd-label "Open ObsidianMD note">
