--- a/chrome/locale/en-US/options.dtd
+++ b/chrome/locale/en-US/options.dtd
@@ -1,26 +1,24 @@
 <!ENTITY obscite.name "Zotero Obsidian Citations">
 <!ENTITY obscite.preferences "Zotero Obsidian Citations Preferences">
 
-<!ENTITY obscite.preferences.vault-source-folder "Obsidian Vault Folder containing Reading Notes">
-<!ENTITY obscite.preferences.vault-source-folder-desc "The directory containing your Markdown notes (notes should begin with @citekey).">
+<!ENTITY obscite.preferences.vault-source-folder "Folder Containing Markdown Reading Notes">
+<!ENTITY obscite.preferences.vault-source-folder-desc "ZoteroObsidianCitations will search this directory recursively for markdown files beginning with '@'.">
+<!ENTITY obscite.preferences.vault-source-folder-subdesc "Markdown files should begin with '@citekey', e.g. '@shepard1987science Universal Law.md', where 'shepard1987science' is the BetterBibTex citekey.">
 
-<!ENTITY obscite.preferences.zotids-source-label "Source of Zotero Item IDs">
-<!ENTITY obscite.preferences.zotids-source-desc "How Should ZoteroObsidianCitations map the BetterBibTex citekeys from your Markdown notes to the Zotero Item?">
+<!ENTITY obscite.preferences.matchstrategy-bbtcitekey-label "Match notes based on BetterBibTex citekey">
+<!ENTITY obscite.preferences.matchstrategy-bbtcitekey-desc "ZoteroObsidianCitations will search the Markdown files for BetterBibTex citekeys.">
 
-<!ENTITY obscite.preferences.pinned-citekeys-title "All of the BetterBibTex citekeys in the Markdown notes are pinned in Zotero">
-<!ENTITY obscite.preferences.pinned-citekeys-label "Find the BetterBibTex citekey in the Extra field">
-<!ENTITY obscite.preferences.pinned-citekeys-desc "If you have pinned the BetterBibTex citekeys in Zotero for the items in your Markdown notes.">
+<!ENTITY obscite.preferences.metadata-keyword-title "(Optional) Markdown Metadata Keyword">
+<!ENTITY obscite.preferences.metadata-keyword-label "yaml keyword:">
+<!ENTITY obscite.preferences.metadata-keyword-desc "If you want to extract the citekey from a Markdown note's metadata, indicate the keyword here. A common value is: 'citekey'.">
+<!ENTITY obscite.preferences.metadata-keyword-subdesc "If no value is given, the citekey will be taken from the note's title.">
 
-<!ENTITY obscite.preferences.bbtjson-title "Use a BetterBibTex JSON library export">
-<!ENTITY obscite.preferences.bbtjson-source-file "BetterBibTex-JSON file:">
-<!ENTITY obscite.preferences.bbtjson-desc "The BetterBibTex JSON export of your library. Must include the fields 'citekey' and 'itemID'. Should be auto-updating.">
+<!ENTITY obscite.preferences.matchstrategy-zotitemkey-label "Match notes based on Zotero-Item-Key">
+<!ENTITY obscite.preferences.matchstrategy-zotitemkey-desc "ZoteroObsidianCitations will search the Markdown files for Zotero Item Keys.">
 
-<!ENTITY obscite.preferences.zotkeyregex-title "Markdown notes contain the Zotero Item Key (e.g. ABCD1234 in zotero://select/library/items/ABCD1234).">
-<!ENTITY obscite.preferences.zotkey-regex-label "Zotero Key RegEx:">
-<!ENTITY obscite.preferences.zotkey-regex-desc "N.B. this is not the same as the BetterBibTex citekey you assigned an item (e.g. mycitekey in zotero://select/items/@mycitekey)">
-
-
-<!ENTITY obscite.preferences.metadata-keyword-label "Markdown Metadata Keyword">
-<!ENTITY obscite.preferences.metadata-keyword-desc "(Optional) If you want to extract the citekey from a Markdown note's metadata, indicate the keyword here. A common value is: citekey. If no value is given, the citekey will be taken from the note's title.">
+<!ENTITY obscite.preferences.zotkeyregex-title "Required: Specify a RegEx to match the Zotero-Item-Key from the Markdown contents,">
+<!ENTITY obscite.preferences.zotkeyregex-desc  "              e.g. match 'ABCD1234' in 'zotero://select/library/items/ABCD1234'">
+<!ENTITY obscite.preferences.zotkey-regex-label "regex:">
+<!ENTITY obscite.preferences.zotkey-regex-subdesc "N.B. this is not the same as the BetterBibTex citekey you assigned an item (e.g. 'shepard1987science' in 'zotero://select/items/@shepard1987science')">
 
 <!ENTITY obscite.preferences.choose-button-label "Choose…">
